--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -17,7 +17,7 @@ $color-pararaph-text-night: #e6e6e6
 
 /* меню бургер */ 
 $color-border-day: #151515
-$color-border-night: #F4F4F4
+$color-border-night: #f4f4f4
 
 /* кнопка переключения фона */ 
 $btn-switch-background-day: #fff
@@ -39,7 +39,10 @@ $color-footer-copyright: #cfcfcf
 
 /* цвет фона точек */
 $color-dot-active-day: #151515
-$color-dot-noactive-day: #CACACA
+$color-dot-noactive-day: #cacaca
 
 /* цвет декоративной линии*/
 $color-decorative-line-day: #e3e3e3
+
+/* бордер элемента select */ 
+$color-border-day: #e3e3e3
