--- a/sass/blocks/header/_header.sass
+++ b/sass/blocks/header/_header.sass
@@ -48,5 +48,7 @@
     &__line
       width: 100%
       height: 2px
-      border: 1px solid $color-border-day
       background-color: $color-border-day
+      border: 1px solid $color-border-day
+      padding: 0
+      margin: 0
