--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,11 +15,10 @@
 
 @media(max-width: 1200px)
   .typestart
+    &__title
+      font-size: 50px
+      line-height: 55px
     &-container
-      &__title
-        width: 100%
-        font-size: 50px
-        line-height: 55px
       &__limiter
         height: 380px
       &__foto-bike
@@ -41,9 +40,6 @@
 
 @media(max-width: 1024px)
   .typestart
-    &__title
-      font-size: 50px
-      line-height: 55px
     &-container
       &__limiter
         width: 128%
@@ -81,8 +77,6 @@
 
 @media(max-width: 880px)
   .typestart
-    &__title
-      padding: 80px 0 0 80px
     &-container
       &__foto-way
         position: relative
@@ -113,14 +107,7 @@
 
 @media (max-width: 768px)
   .header
-    padding: 28px 18px 30px 0
-  .menu
-    &__items
-      &_visible
-        display: none
-    &-button
-      &_visible
-        display: flex
+    padding: 28px 18px 30px
   .typestart
     display: flex
     flex-direction: column
@@ -212,6 +199,7 @@
       align-items: flex-start
       margin: 0 auto 40px
       &-title
+        width: 284px
         margin: 0 0 40px 0
       &-items
         display: none
@@ -219,18 +207,25 @@
       display: block
       width: 114px
       height: 30px
-      background-color: #F4F4F4
-      border: 1px solid #E3E3E3
+      background-color: #f4f4f4
+      border: 1px solid $color-border-day
       border-radius: 2px
-      font-style: normal
-      font-weight: 600
-      font-size: 11px
-      line-height: 14px
-      color: #151515
       padding: 0
       margin: 0
-      &:focus
-        outline: none
+      & select
+        width: 100%
+        height: 100%
+        font-style: normal
+        font-weight: 600
+        font-size: 11px
+        line-height: 14px
+        color: #151515
+        border-radius: inherit
+        background-color: inherit
+        &:focus
+          outline: none
+        & option
+          background-color: #f4f4f4
     &__systems
       justify-content: center
       margin-bottom: 20px
@@ -289,8 +284,6 @@
         margin: 0 10px 0 0
 
 @media (max-width: 500px)
-  .header
-    padding: 28px 18px 30px 0
   .menu
     &__items
       &_visible
@@ -321,6 +314,8 @@
     &-info
       padding: 0
       margin: 0
+      &__paragraph
+        @include textminParagraph()
       &__link
         padding: 0
         margin: 0
@@ -339,6 +334,7 @@
       font-size: 32px
       line-height: 40px
     &__paragraph
+      @include textminParagraph()
       margin: 0
     &__buttons-mob
       display: flex
@@ -368,8 +364,7 @@
       line-height: 40px
       margin: 0 0 40px 0
     &__paragraph
-      font-size: 12px
-      line-height: 18px
+      @include textminParagraph()
       margin: 0 0 40px 0
   .footer
     min-height: 358px
