--- a/sass/blocks/road/_road.sass
+++ b/sass/blocks/road/_road.sass
@@ -14,12 +14,7 @@
     margin: 0 0 50px 0
   &__title
     width: 460px
-    font-style: normal
-    font-weight: 700
-    font-size: 55px
-    line-height: 60px
-    letter-spacing: -0.5px
-    color: $color-header-text-day
+    @include textTitle
     text-align: left
     padding: 0
     margin: 0
@@ -29,13 +24,8 @@
     margin: 0
   &__paragraph
     width: 460px
-    font-style: normal
-    font-weight: 400
-    font-size: 18px
-    line-height: 28px
-    color: $color-pararaph-text-day
+    @include textParagraph()
     text-align: left
-    opacity: 0.7
     padding: 0
     margin: 0 0 80px 0
   &__foto
