--- a/sass/blocks/typestart/_typestart.sass
+++ b/sass/blocks/typestart/_typestart.sass
@@ -6,12 +6,7 @@
   position: relative
   &__title
     width: 460px
-    font-style: normal
-    font-weight: 700
-    font-size: 55px
-    line-height: 60px
-    letter-spacing: -0.5px
-    color: $color-title-text-day
+    @include textTitle()
     padding: 80px 0 0 120px
     margin: 0 0 50px
   &-container
@@ -56,12 +51,7 @@
     padding: 0 0 209px 120px
     &__paragraph
       width: 100%
-      font-style: normal
-      font-weight: 400
-      font-size: 18px
-      line-height: 28px
-      opacity: 0.7
-      color: $color-pararaph-text-day
+      @include textParagraph()
       padding: 0
       margin: 0 0 50px 0
     &__link
