--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -16,8 +16,8 @@ $color-pararaph-text-day: #222222
 $color-pararaph-text-night: #e6e6e6
 
 /* меню бургер */ 
-$color-border-day: #151515
-$color-border-night: #f4f4f4
+$color-menu-border-day: #151515
+$color-menu-border-night: #f4f4f4
 
 /* кнопка переключения фона */ 
 $btn-switch-background-day: #fff
