--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -61,9 +61,6 @@
       &-title
         font-size: 45px
         line-height: 50px
-    &__system
-      &-foto
-        margin: 0 15px 22px 0
   .training
     padding: 100px 120px 60px
     &__title
@@ -203,8 +200,9 @@
     &-selected
       display: block
     &__systems
-      justify-content: center
-      margin-bottom: 20px
+      flex-direction: column
+      justify-content: flex-start
+      align-items: center
     &__system
       box-sizing: border-box
       width: 284px
@@ -213,6 +211,9 @@
       border-radius: 20px
       background-color: #f8f8f8
       filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06))
+      margin-bottom: 20px
+      &:last-child
+        margin-bottom: 0
       &-name
         display: block
         width: 254px
@@ -224,13 +225,7 @@
         height: 254px
         padding: 0
         margin: 0 0 3px 0
-      &:nth-child(2n + 1)
-        width: 0
-        display: none
-    &-dot
-      display: flex
-      justify-content: space-between
-      margin: 0 auto
+
   .training
     display: flex
     flex-direction: column
@@ -360,3 +355,14 @@
       display: none
     &__logo
       display: block
+
+@media (max-width: 350px)
+  .bike
+    &__system
+      &:not(:first-child)
+        width: 0
+        display: none
+    &-dot
+      display: flex
+      justify-content: space-between
+      margin: 0 auto
