--- a/sass/blocks/bike/_bike.sass
+++ b/sass/blocks/bike/_bike.sass
@@ -32,7 +32,7 @@
     &-title
       width: 460px
       @include textTitle()
-      padding: 0 0 0 0
+      padding: 0
       margin: 0
     &-items
       width: 100%
@@ -45,8 +45,8 @@
     &-item
       padding: 0
       margin: 0 40px 0 0
-    &-item:last-child
-      margin: 0
+      &:last-child
+        margin: 0
     &-link
       border: none
       background-color: transparent
@@ -103,9 +103,7 @@
       object-position: center
       filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06))
       padding: 20px
-      margin: 0 0 22px 0
-      &:last-child
-        margin: 0
+      margin: 0
   &-dot
     display: none
     width: 22px
@@ -117,5 +115,7 @@
       border: none
       border-radius: 50%
       background: $color-dot-noactive-day
+      padding: 0
+      margin: 0
       &_active
         background: $color-dot-active-day
