--- a/sass/blocks/header/_header.sass
+++ b/sass/blocks/header/_header.sass
@@ -48,7 +48,7 @@
     &__line
       width: 100%
       height: 2px
-      background-color: $color-border-day
-      border: 1px solid $color-border-day
+      background-color: $color-menu-border-day
+      border: 1px solid $color-menu-border-day
       padding: 0
       margin: 0
