--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -39,7 +39,8 @@ $color-footer-copyright: #cfcfcf
 
 /* цвет фона точек */
 $color-dot-active-day: #151515
-$color-dot-noactive-day: #cacaca
+$color-dot-active-night: #fff4
+$color-dot-noactive: #cacaca
 
 /* цвет декоративной линии*/
 $color-decorative-line-day: #e3e3e3
