--- a/sass/blocks/bike/_bike.sass
+++ b/sass/blocks/bike/_bike.sass
@@ -103,7 +103,7 @@
       object-position: center
       filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06))
       padding: 20px
-      margin: 0
+      margin: 0 0 22px 0
   &-dot
     display: none
     width: 22px
@@ -114,8 +114,10 @@
       height: 4px
       border: none
       border-radius: 50%
-      background: $color-dot-noactive-day
+      background: $color-dot-noactive
       padding: 0
       margin: 0
       &_active
-        background: $color-dot-active-day
+        background-color: $color-dot-active-day
+      &_active-night
+        background-color: #fff
