--- a/sass/blocks/header/_header.sass
+++ b/sass/blocks/header/_header.sass
@@ -41,8 +41,12 @@
     height: 22px
     border: 0
     background-color: transparent
+    cursor: pointer
     margin: 0
     padding: 0
+    &:hover
+      opacity: 0.6
+      transition: opacity 0.3s linear
     &_visible
       display: none
     &__line
