--- a/sass/blocks/road/_road.sass
+++ b/sass/blocks/road/_road.sass
@@ -68,6 +68,9 @@
     background-position: center
     border-radius: 50px
     cursor: pointer
+    &:hover
+      opacity: 0.6
+      transition: opacity 0.3s linear
     &-mob
       width: 24px
       height: 24px
